src/main/resources/css/settingsstyle.css
/*
 * Style for the settings menu.
 * Scrumbledore, a faithful recreation of Bubble Bobble.
 * 
 * @author David Alderliesten.
 */
 
 .root, .button {
 	-fx-background-color: #1d1d1d;
 }
 
 #settingstitle {
 	-fx-text-fill: #32b8f1;
 	-fx-font-weight: bold;
 	-fx-font-size: 35.0px;
 	-fx-padding: 0.0 0.0 0.0 11.0;
 }
 
 .label {
 	-fx-text-fill: #ffffff;
 	-fx-font-size: 15.0px;
 	-fx-padding: 0.0 0.0 0.0 10.0;
 }
 
 .radio-button {
 	-fx-text-fill: #32b8f1;
 	-fx-text-size: 15.0px;
 	-fx-font-weight: bold;
 }
 
 .radio-button .radio, .radio-button .dot {
 	-fx-background-color: transparent;
 }
 
 .radio-button:focused .dot {
 	-fx-background-color: #32b8f1;
 }
 
 .button {
 	-fx-text-fill: #cccccc;
 	-fx-font-size: 15.0px;
 	-fx-border-color: #1d1d1d;
 	-fx-border-style: solid;
 	-fx-border-width: 0.0 0.0 0.0 5.0;
 	-fx-padding: 0.0 0.0 0.0 10.0;
 }
 
 .button:hover {
 	-fx-text-fill: #32b8f1;
 	-fx-border-color: #32b8f1;
 }

